--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,49 +3,64 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+    {% block navbar %}{% endblock %}
+
+    <section class="vh-100">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6 text-black">
+                    <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+                        <form method="post" class="w-100">
+                            {% if error %}
+                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            {% endif %}
+
+                            {% if app.user %}
+                                <div class="mb-3">
+                                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                                </div>
+                            {% endif %}
+
+                            <h1 class="h3 mb-3 font-weight-normal">Connectez-vous !</h1>
+
+                            <div class="form-group">
+                                <label for="username"></label>
+                                <input value="{{ last_username }}" name="_username" id="username" class="form-control"
+                                       placeholder="Email ou pseudo" required autofocus>
+                            </div>
+
+                            <div class="form-group mt-3">
+                                <label for="password"></label>
+                                <input type="password" name="_password" id="password" class="form-control"
+                                       autocomplete="current-password" placeholder="Mot de passe" required>
+                            </div>
+
+                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                <div>
+                                    <input type="checkbox" name="_remember_me" checked> Rappelez-vous de moi!
+                                </div>
+                                <div>
+                                    <a href="{{ path('app_forgot_password_request') }}">Oubli de mdp ?</a>
+                                </div>
+                            </div>
+
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                            <div class="text-center mt-4">
+                                <button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-sm-6 px-0 d-none d-sm-block">
+                    <img src="{{ asset('/uploads/photos/nantesprofil.jpg') }}"
+                         alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+                </div>
             </div>
-        {% endif %}
-
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Email ou pseudo</label>
-        <input value="{{ last_username }}" name="_username" id="username" class="form-control" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-
-        <label>
-            <input type="checkbox" name="_remember_me" checked>
-            Rappelez vous de moi!
-        </label>
-
-
-
-
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
-
-        {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <input type="checkbox" name="_remember_me" id="_remember_me">
-            <label for="_remember_me">Remember me</label>
         </div>
-        #}
+    </section>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
+{% block footer %}{% endblock %}
 
-    </form>
-    <a href="{{ path('app_forgot_password_request') }}">Oubli de mdp ?</a>
 {% endblock %}
