--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -15,6 +15,10 @@
                         <td>{{ sortie.nom }}</td>
                     </tr>
                     <tr>
+                        <th>Organisateur</th>
+                        <td>{{ sortie.noParticipant.nom }} {{ sortie.noParticipant.prenom }}</td>
+                    </tr>
+                    <tr>
                         <th>Date de Début</th>
                         <td>{{ sortie.dateDebut ? sortie.dateDebut|date('d-m-Y H:i') : '' }}</td>
                     </tr>
@@ -67,7 +71,7 @@
                         <a href="{{ path('app_sorties_publication', {'id': sortie.id} ) }}"
                            class="btn btn-success ms-2">Publier</a>
                     {% endif %}
-                    <a href="{{ path('app_home') }}" class="btn btn-primary ms-2">Autres sorties</a>
+
 
                 </div>
 
@@ -99,7 +103,8 @@
     </div>
 
     <div class="d-flex justify-content-center mt-4">
-        <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-success ms-2">Modifier</a>
+
+
 
         {# Affichage conditionnel des boutons d'inscription #}
         {% if isInscrit %}
@@ -112,8 +117,14 @@
                 que la sortie est encore ouverte, que la date de clôture n'est pas dépassée,
                 et que la limite des inscriptions n'est pas atteinte #}
             <a href="{{ path('app_sorties_inscription', {'id': sortie.id}) }}" class="btn btn-primary ms-2">S'inscrire</a>
-            {{ include('sorties/_delete_form.html.twig') }}
-            <a href="{{ path('app_sorties_annuler', {'id': sortie.id}) }}" class="btn btn-primary ms-2">Annuler la sortie</a>
         {% endif %}
+        {% if user.getId() == sortie.noParticipant.getId() %}
+            <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-success ms-2">Modifier</a>
+            {{ include('sorties/_delete_form.html.twig') }}
+        {% endif %}
+        {% if user.isAdministrateur() or user.getId() == sortie.noParticipant.getId() %}
+            <a href="{{ path('app_sorties_annuler', {'id': sortie.id}) }}" class="btn btn-warning ms-2">Annuler la sortie</a>
+        {% endif %}
+        <a href="{{ path('app_home') }}" class="btn btn-primary ms-2">Revenir a l'acceuil</a>
     </div>
 {% endblock %}
