--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,8 +6,8 @@
     <div class="container">
         <header>
             <h1>Sorties du fond</h1>
-
         </header>
+
         <div class="border border-2 border-opacity-25 border-dark rounded p-4" style="background-color: #2A3440;
     padding: 20px;
     color: ivory;
@@ -15,6 +15,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
     margin: 20px auto;
     max-width: 700px;">
+
             {{ form_start(searchForm) }}
             {{ form_row(searchForm.noLieu) }}
             {{ form_row(searchForm.nom) }}
@@ -26,6 +27,7 @@
                     {{ form_widget(searchForm.dateFin, { 'attr': { 'class': 'form-control' } }) }}
                 </div>
             </div>
+
             <div class="p-4">
                 <h3>Plus de filtres</h3>
             </div>
@@ -46,6 +48,7 @@
         <div class="container">
             <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center">
                 {% for sortie in sorties %}
+                    {% if (sortie.noEtat.id != 1) or (sortie.noEtat.id != 6) or (sortie.noEtat.id != 7) %}
                     <div class="col">
                         <div class="card h-100 d-flex flex-column">
                             <div class="card-body d-flex flex-column">
@@ -54,16 +57,18 @@
                                 <h6 class="card-subtitle mb-2 text-muted">{{ sortie.noLieu.nomLieu }}
                                     ({{ sortie.noLieu.noVille.nomVille }})</h6>
                                 <p class="card-text">{{ sortie.descriptionInfos }}</p>
+                                <p class="card-text">{{ sortie.noEtat.libelle }}</p>
                                 <p class="card-text">{{ sortie.dateDebut | date('d M y') }}</p>
                                 <a href="{{ path('app_sorties_show', {'id': sortie.id}) }}"
                                    class="btn btn-outline-info ms-2 mb-2">Détails</a>
                                 <button type="button" class="btn btn-primary position-relative ms-2">
                                     S'inscrire<span
-                                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2/{{ sortie.nbInscriptionsMax }}</span>
+                                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">{{ sortie.inscriptions|length }}/{{ sortie.nbInscriptionsMax }}</span>
                                 </button>
                             </div>
                         </div>
                     </div>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
